# shadow-ai-vnc

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  shadow-ai-vnc-fixed.py  shadow-ai-vnc.py  shadow_ai_vnc.py  vnc_skill.py  vncctl.py
.github/workflows/: release.yml
shadow_ai_vnc/: __init__.py  cli.py  client.py  protocol.py  transport.py
