[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadow-ai-vnc"
version = "0.2.1"
description = "Headless VNC client for AI agents and automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Pantera"},
]
keywords = ["vnc", "automation", "ai", "remote", "screenshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "vncdotool>=1.2.0",
    "Pillow>=10.0.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/engraver4ever-ctrl/shadow-ai-vnc"
Repository = "https://github.com/engraver4ever-ctrl/shadow-ai-vnc"

[project.scripts]
shadow-ai-vnc = "shadow_ai_vnc:main"
shadow-ai-vnc-skill = "shadow_ai_vnc.skill:main"

[tool.hatch.build.targets.wheel]
packages = ["shadow_ai_vnc"]
